--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@symfony/webpack-encore": "^4.5.0",
         "bootstrap": "^5.3.2",
         "core-js": "^3.23.0",
+        "eslint": "^8.55.0",
+        "eslint-plugin-promise": "^6.1.1",
         "jquery": "^3.7.1",
         "node-sass": "^9.0.0",
         "regenerator-runtime": "^0.13.9",
