--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=f37869e3847c62ad4a46f74ccc0bc21f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@127.0.0.1:3306/datalakeV2?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://symfony:ynofmyS59@127.0.0.1:3306/datalakeV2?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
